--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@agrc/mouse-trap",
-  "version": "1.0.0",
+  "name": "mouse-trap",
+  "version": "1.1.0",
   "description": "Widget to display cursor coordinates while hovering over a map",
   "scripts": {
-    "test": "grunt travis --verbose"
+    "test": "grunt test",
+    "build": "grunt build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agrc-widgets/mouse-trap.git"
+    "url": "git+https://github.com/steveoh/mouse-trap.git"
   },
   "keywords": [
     "agrc",
@@ -38,8 +39,12 @@
     "grunt-contrib-jasmine": "2.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-eslint": "20.1.0",
+    "grunt-karma": "^2.0.0",
     "jasmine": "3.1.0",
     "jasmine-favicon-reporter": "1.0.0",
+    "karma": "^2.0.3",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.2",
     "load-grunt-tasks": "4.0.0"
   }
 }
