--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "scripts": {
+    "dev": "lerna run build --parallel -- --watch",
+    "lint": "eslint .",
+    "clean": "lerna run clean"
+  },
 	"devDependencies": {
-		"lerna": "^2.11.0"
+		"lerna": "^2.11.0",
+      "grunt": "1.0.3",
+      "load-grunt-tasks": "4.0.0",
+      "grunt-contrib-jasmine": "2.0.1",
+      "grunt-eslint": "20.1.0",
+      "grunt-contrib-connect": "^1.0.2"
 	}
 }
