--- a/packages/map-tools/package.json
+++ b/packages/map-tools/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "map-tools",
-  "version": "2.2.0",
+  "name": "steveoh-testing-mono-map-tools",
+  "version": "2.0.0",
   "description": "AGRC tools for working with ESRI JS API maps",
   "repository": {
     "type": "git",
-    "url": "https://github.com/steveoh/map-tools.git"
+    "url": "https://github.com/steveoh/steveoh-testing-mono-map-tools.git"
   },
   "keywords": [
     "agrc",
