--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "lint": "eslint .",
     "clean": "lerna run clean"
   },
-	"devDependencies": {
-		"lerna": "^2.11.0",
-      "grunt": "1.0.3",
-      "load-grunt-tasks": "4.0.0",
-      "grunt-contrib-jasmine": "2.0.1",
-      "grunt-eslint": "20.1.0",
-      "grunt-contrib-connect": "^1.0.2"
-	}
+  "devDependencies": {
+    "eslint-config-agrc": "1.2.0",
+    "eslint-plugin-html": "4.0.5",
+    "grunt": "1.0.3",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-jasmine": "2.0.1",
+    "grunt-eslint": "20.1.0",
+    "lerna": "^2.11.0",
+    "load-grunt-tasks": "4.0.0"
+  }
 }
