--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -30,18 +30,11 @@
   "devDependencies": {
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-env": "^1.7.0",
-    "eslint-config-agrc": "^1.1.0",
-    "eslint-plugin-html": "4.0.3",
-    "grunt": "1.0.3",
     "grunt-babel": "^6.0.0",
     "grunt-bump": "^0.8.0",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-jasmine": "2.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-eslint": "20.1.0",
     "grunt-karma": "^2.0.0",
     "jasmine": "3.1.0",
-    "jasmine-favicon-reporter": "1.0.0",
-    "load-grunt-tasks": "4.0.0"
+    "jasmine-favicon-reporter": "1.0.0"
   }
 }
