--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "scripts": {
+    "clean": "lerna run clean",
     "dev": "lerna run build --parallel -- --watch",
     "lint": "eslint .",
-    "clean": "lerna run clean"
+    "prepublish": "grunt sass && grunt babel",
+    "test": "grunt travis --verbose"
   },
   "devDependencies": {
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "babel-preset-env": "1.7.0",
     "eslint-config-agrc": "1.2.0",
     "eslint-plugin-html": "4.0.5",
     "grunt": "1.0.3",
+    "grunt-babel": "6.0.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-jasmine": "2.0.1",
     "grunt-eslint": "20.1.0",
