--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "grunt-babel": "6.0.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-jasmine": "2.0.1",
+    "grunt-contrib-watch": "1.1.0",
     "grunt-eslint": "20.1.0",
+    "grunt-newer": "1.3.0",
+    "jasmine-favicon-reporter": "1.0.0",
     "lerna": "^2.11.0",
     "load-grunt-tasks": "4.0.0"
   }
