--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "grunt-contrib-jasmine": "2.0.1",
     "grunt-contrib-watch": "1.1.0",
     "grunt-eslint": "20.1.0",
+    "grunt-exec": "3.0.0",
     "grunt-newer": "1.3.0",
+    "jasmine": "3.1.0",
     "jasmine-favicon-reporter": "1.0.0",
     "lerna": "^2.11.0",
-    "load-grunt-tasks": "4.0.0"
+    "load-grunt-tasks": "4.0.0",
+    "puppeteer": "1.5.0"
   }
 }
