--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-eslint": "20.1.0",
     "grunt-exec": "3.0.0",
     "grunt-newer": "1.3.0",
+    "grunt-sass": "2.1.0",
     "jasmine": "3.1.0",
     "jasmine-favicon-reporter": "1.0.0",
     "lerna": "^2.11.0",
