--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "scripts": {
     "clean": "lerna run clean",
     "dev": "lerna run build --parallel -- --watch",
@@ -6,6 +7,9 @@
     "prepublish": "grunt sass && grunt babel",
     "test": "grunt travis --verbose"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-env": "1.7.0",
