chore: wipe clean & lerna init & storybook

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,1 @@
-# package manager files
-node_modules/
-
-# task runner files
-.grunt/
-_SpecRunner.html
-
-# built source files
-src/
-*.map
-
-# built test files
-spec/
-
-# built package specific files
-packages/mouse-trap/main.js
-packages/mouse-trap/MouseTrap.js
-
-packages/map-tools/MapView.js
-packages/map-tools/extentRouter.js
-
-# secrets
-secrets.json
-
-# operating system files
-.DS_Store
-lerna-debug.log
+node_modules
