--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
-  "scripts": {
-    "clean": "lerna run clean",
-    "dev": "lerna run build --parallel -- --watch",
-    "lint": "eslint .",
-    "prepublish": "grunt sass && grunt babel",
-    "test": "grunt travis --verbose",
-    "install": "lerna bootstrap"
-  },
+  "name": "root",
+  "private": true,
   "devDependencies": {
-    "babel-plugin-transform-remove-strict-mode": "0.0.2",
-    "babel-preset-env": "1.7.0",
-    "eslint-config-agrc": "1.2.0",
-    "eslint-plugin-html": "4.0.5",
-    "grunt": "1.0.3",
-    "grunt-babel": "6.0.0",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-jasmine": "2.0.1",
-    "grunt-contrib-watch": "1.1.0",
-    "grunt-eslint": "20.1.0",
-    "grunt-exec": "3.0.0",
-    "grunt-newer": "1.3.0",
-    "grunt-sass": "2.1.0",
-    "jasmine": "3.1.0",
-    "jasmine-favicon-reporter": "1.0.0",
-    "lerna": "^2.11.0",
-    "load-grunt-tasks": "4.0.0",
-    "puppeteer": "1.5.0"
+    "@babel/core": "7.7.7",
+    "@storybook/addon-actions": "5.2.8",
+    "@storybook/addon-links": "5.2.8",
+    "@storybook/addons": "5.2.8",
+    "@storybook/react": "5.2.8",
+    "babel-loader": "8.0.6",
+    "lerna": "^3.19.0"
+  },
+  "dependencies": {},
+  "scripts": {
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   }
 }
