--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@babel/cli": "7.7.7",
     "@babel/core": "7.7.7",
+    "@babel/plugin-proposal-class-properties": "7.7.4",
+    "@babel/preset-env": "7.7.7",
+    "@babel/preset-react": "7.7.4",
     "@storybook/addon-actions": "5.2.8",
     "@storybook/addon-links": "5.2.8",
     "@storybook/addons": "5.2.8",
     "@storybook/react": "5.2.8",
     "babel-loader": "8.0.6",
-    "lerna": "^3.19.0"
+    "core-js": "3.6.0",
+    "lerna": "^3.19.0",
+    "regenerator-runtime": "0.13.3"
   },
   "dependencies": {},
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "lerna exec 'babel ./ --out-dir lib --root-mode upward'"
   }
 }
