--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build": "lerna exec 'babel ./ --out-dir lib --root-mode upward --copy-files --delete-dir-on-start --source-maps'"
+    "build": "lerna exec 'babel ./ --out-dir dist --root-mode upward --copy-files --delete-dir-on-start --source-maps'"
   }
 }
