--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@storybook/addons": "5.2.8",
     "@storybook/react": "5.2.8",
     "babel-loader": "8.0.6",
+    "copyfiles": "2.1.1",
     "core-js": "3.6.0",
     "lerna": "^3.19.0",
     "regenerator-runtime": "0.13.3"
@@ -20,6 +21,6 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build": "lerna exec 'babel ./ --out-dir dist --root-mode upward --copy-files --delete-dir-on-start --source-maps'"
+    "build": "lerna exec 'babel ./ --out-dir dist --root-mode upward --delete-dir-on-start --source-maps && copyfiles *.svg dist'",
   }
 }
