--- a/babel.config.json
+++ b/babel.config.json
@@ -5,5 +5,12 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "require-context-hook"
+      ]
+    }
+  }
 }
