--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@babel/preset-react": "7.7.4",
     "@storybook/addon-actions": "5.2.8",
     "@storybook/addon-links": "5.2.8",
+    "@storybook/addon-storyshots": "5.2.8",
     "@storybook/addons": "5.2.8",
     "@storybook/react": "5.2.8",
     "babel-loader": "8.0.6",
+    "babel-plugin-require-context-hook": "1.0.0",
     "copyfiles": "2.1.1",
     "core-js": "3.6.0",
+    "jest": "24.9.0",
     "lerna": "^3.19.0",
+    "react-test-renderer": "16.12.0",
     "regenerator-runtime": "0.13.3"
   },
   "dependencies": {},
@@ -22,5 +26,11 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build": "lerna exec 'babel ./ --out-dir dist --root-mode upward --delete-dir-on-start --source-maps && copyfiles *.svg dist'",
+    "test": "jest --watch"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/.jest/register-context.js"
+    ]
   }
 }
