--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -2,7 +2,7 @@
   "name": "layer-selector",
   "version": "0.1.0",
   "private": true,
-  "main": "./LayerSelector.js",
+  "main": "./dist/LayerSelector.js",
   "peerDependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
