--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chokidar-cli": "2.1.0",
     "copyfiles": "2.1.1",
     "core-js": "3.6.2",
+    "esri-loader": "^2.13.0",
     "jest": "24.9.0",
     "lerna": "^3.20.2",
     "react-test-renderer": "16.12.0",
