build: ignore css files

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   "jest": {
     "setupFiles": [
       "<rootDir>/.jest/register-context.js"
+    ],
+    "transformIgnorePatterns": [
+      "\\.css"
     ]
   }
 }
