--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "copyfiles": "2.1.1",
     "core-js": "3.6.2",
     "esri-loader": "^2.13.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "24.9.0",
     "lerna": "^3.20.2",
     "react-test-renderer": "16.12.0",
@@ -37,8 +38,9 @@
     "setupFiles": [
       "<rootDir>/.jest/register-context.js"
     ],
-    "transformIgnorePatterns": [
-      "\\.css"
-    ]
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|scss)$": "identity-obj-proxy"
+    }
   }
 }
