--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "chokidar-cli": "2.1.0",
     "copyfiles": "2.1.1",
     "core-js": "3.6.2",
+    "eslint": "^6.8.0",
+    "eslint-config-agrc": "^1.3.0",
     "esri-loader": "^2.13.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "24.9.0",
@@ -26,6 +28,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.6"
+  },
+  "eslintConfig": {
+    "extends": "agrc"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
