--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "dependencies": {
     "classnames": "^2.2.6"
   },
+  "peerDependencies": {
+    "react": "^16.12.0"
+  },
   "eslintConfig": {
     "extends": "agrc"
   },
