--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "test": "jest --watch",
     "start": "chokidar \"packages/**/*.*\" \"!packages/**/dist/**/*.*\" -c \"npm run build\"",
     "link": "lerna exec -- npm link",
-    "unlink": "lerna exec -- npm unlink"
+    "unlink": "lerna exec -- npm unlink",
+    "lint": "eslint ./"
   },
   "jest": {
     "setupFiles": [
