--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@agrc/eslint-config": "2.x",
     "@babel/cli": "7.7.7",
     "@babel/core": "7.7.7",
     "@babel/preset-env": "7.7.7",
@@ -17,7 +18,6 @@
     "copyfiles": "2.1.1",
     "core-js": "3.6.2",
     "eslint": "^6.8.0",
-    "eslint-config-agrc": "^1.3.0",
     "esri-loader": "^2.13.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "24.9.0",
@@ -32,7 +32,8 @@
     "react": "^16.12.0"
   },
   "eslintConfig": {
-    "extends": "agrc"
+    "extends": "@agrc",
+    "ignorePatterns": ["dist/"]
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
