--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@agrc/eslint-config": "2.x",
+    "@agrc/eslint-config": "^1.3.0",
     "@babel/cli": "7.7.7",
     "@babel/core": "7.7.7",
     "@babel/preset-env": "7.7.7",
@@ -33,7 +33,9 @@
   },
   "eslintConfig": {
     "extends": "@agrc",
-    "ignorePatterns": ["dist/"]
+    "ignorePatterns": [
+      "dist/"
+    ]
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
