--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
-  "name": "root",
+  "name": "agrc-component-monorepo",
+  "version": "1.0.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/agrc/kitchen-sink.git"
+  },
+  "main": "",
   "private": true,
   "devDependencies": {
     "@agrc/eslint-config": "^1.3.0",
