--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "link": "lerna exec -- npm link",
     "unlink": "lerna exec -- npm unlink",
     "lint": "eslint ./",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "jest": {
     "setupFiles": [
