build(monorepo): update release commit message template
Co-authored-by: steveoh <sgourley@utah.gov>

--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,7 @@
   ],
   "command": {
     "publish": {
+      "message": "chore(release): publish",
       "ignoreChanges": [
         "*.stories.js",
         "*.test.js",
