build(monorepo): protect publishing branches

--- a/lerna.json
+++ b/lerna.json
@@ -10,6 +10,11 @@
         "*.test.js",
         "*.md"
       ]
+    },
+    "version": {
+      "allowBranch": [
+        "master"
+      ],
     }
   },
   "version": "independent"
