--- a/lerna.json
+++ b/lerna.json
@@ -15,6 +15,8 @@
       "allowBranch": [
         "master"
       ],
+      "signGitCommit": true,
+      "signGitTag": true
     }
   },
   "version": "independent"
