--- a/package.json
+++ b/package.json
@@ -10,28 +10,27 @@
   "private": true,
   "devDependencies": {
     "@agrc/eslint-config": "^1.3.0",
-    "@babel/cli": "7.8.3",
-    "@babel/core": "7.8.3",
-    "@babel/preset-env": "7.8.3",
-    "@babel/preset-react": "7.8.3",
-    "@storybook/addon-actions": "5.3.3",
-    "@storybook/addon-links": "5.3.3",
-    "@storybook/addon-storyshots": "5.3.3",
-    "@storybook/addons": "5.3.3",
-    "@storybook/preset-create-react-app": "^1.5.1",
-    "@storybook/react": "5.3.3",
-    "babel-loader": "8.0.6",
-    "babel-plugin-require-context-hook": "1.0.0",
-    "chokidar-cli": "2.1.0",
-    "copyfiles": "2.1.1",
-    "core-js": "3.6.4",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@storybook/addon-actions": "^5.3.3",
+    "@storybook/addon-links": "^5.3.3",
+    "@storybook/addon-storyshots": "^5.3.3",
+    "@storybook/addons": "^5.3.3",
+    "@storybook/react": "^5.3.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "chokidar-cli": "^2.1.0",
+    "copyfiles": "^2.1.1",
+    "core-js": "^3.6.4",
     "eslint": "^6.8.0",
     "esri-loader": "^2.13.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "24.9.0",
+    "jest": "^24.9.0",
     "lerna": "^3.20.2",
-    "react-test-renderer": "16.12.0",
-    "regenerator-runtime": "0.13.3"
+    "react-test-renderer": "^16.12.0",
+    "regenerator-runtime": "^0.13.3"
   },
   "peerDependencies": {
     "react": "^16.12.0"
