--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "build-storybook": "build-storybook",
     "build": "lerna exec 'babel ./ --out-dir dist --root-mode upward --delete-dir-on-start --source-maps --ignore \"**/*.stories.js\",\"**/*.test.js\" && copyfiles *.svg *.css dist'",
     "test": "jest",
+    "testing": "jest --watch",
     "start": "chokidar \"packages/**/*.*\" \"!packages/**/dist/**/*.*\" -c \"npm run build\"",
     "link": "lerna exec -- npm link",
     "unlink": "lerna exec -- npm unlink",
