--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.2.0",
     "core-js": "^3.6.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "esri-loader": "^2.13.0",
     "identity-obj-proxy": "^3.0.0",
