--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@agrc/helpers",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": false,
   "main": "./dist/index.js",
-  "files": ["/dist", "/package.json"],
-  "peerDependencies": {
-  }
+  "files": [
+    "/dist",
+    "/package.json"
+  ]
 }
