feat: initial port of sherlock widget
Includes upgrades to babel and storybook and Sass integration.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
   "cSpell.words": [
+    "TSQL",
     "baselayer",
-    "copyfiles"
+    "copyfiles",
+    "fontawesome",
+    "fortawesome",
+    "hasmore",
+    "maxresults",
+    "toomany"
   ]
 }
