--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   "private": true,
   "devDependencies": {
     "@agrc/eslint-config": "^1.3.0",
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
-    "@storybook/addon-storyshots": "^5.3.8",
-    "@storybook/addons": "^5.3.8",
-    "@storybook/react": "^5.3.8",
+    "@storybook/addon-storyshots": "^6.0.22",
+    "@storybook/addons": "^6.0.22",
+    "@storybook/react": "^6.0.22",
     "babel-loader": "^8.1.0",
     "babel-plugin-require-context-hook": "^1.0.0",
+    "babel-plugin-transform-rename-import": "^2.3.0",
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.3.0",
     "core-js": "^3.6.5",
@@ -28,7 +30,9 @@
     "jest": "^24.9.0",
     "lerna": "^3.22.1",
     "react-test-renderer": "^16.13.1",
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.7",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2"
   },
   "peerDependencies": {
     "react": "^16.12.0"
@@ -42,7 +46,7 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build": "lerna exec 'babel ./ --out-dir dist --root-mode upward --delete-dir-on-start --source-maps --ignore \"**/*.stories.js\",\"**/*.test.js\" && copyfiles *.svg *.css dist'",
+    "build": "lerna exec 'babel src --out-dir dist --root-mode upward --delete-dir-on-start --source-maps --ignore \"**/*.stories.js\",\"**/*.test.js\" --env-name prod && copyfiles -u 1 src/*.svg dist && sass src:dist'",
     "test": "jest",
     "start": "chokidar \"packages/**/*.*\" \"!packages/**/dist/**/*.*\" -c \"npm run build\"",
     "link": "lerna exec -- npm link",
