--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build": "lerna exec 'babel src --out-dir dist --root-mode upward --delete-dir-on-start --source-maps --ignore \"**/*.stories.js\",\"**/*.test.js\" --env-name prod && copyfiles --up 1 src/*.svg dist && sass src:dist'",
-    "test": "jest",
+    "test": "jest --watch",
     "start": "chokidar \"packages/**/*.*\" \"!packages/**/dist/**/*.*\" -c \"npm run build\"",
     "link": "lerna exec -- npm link",
     "unlink": "lerna exec -- npm unlink",
