--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 script:
   - npx lerna bootstrap
   - npm run lint
-  - npm test
+  - npm test -- --watchAll=false
   - npm run build
 notifications:
   email:
