--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "private": true,
   "devDependencies": {
     "@agrc/eslint-config": "^1.3.0",
-    "@babel/cli": "^7.11.6",
+    "@babel/cli": "^7.12.1",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@storybook/addon-essentials": "^6.0.27",
     "@storybook/addon-storyshots": "^6.0.22",
     "@storybook/addons": "^6.0.22",
     "@storybook/react": "^6.0.22",
