chore: update dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,17 @@
 {
   "cSpell.words": [
+    "SGID",
     "TSQL",
+    "agrc",
     "baselayer",
+    "basemap",
     "copyfiles",
     "fontawesome",
     "fortawesome",
     "hasmore",
     "maxresults",
-    "toomany"
+    "storyshots",
+    "toomany",
+    "wkid"
   ]
 }
