fix: standardize package.json's and readme's
Add `license`, `homepage`, and `repository` props.

We shouldn't need to specify `package.json` in `files` according to this doc: https://docs.npmjs.com/cli/v6/configuring-npm/package-json#files

--- a/packages/dartboard/package.json
+++ b/packages/dartboard/package.json
@@ -2,10 +2,15 @@
   "name": "@agrc/dart-board",
   "version": "3.0.0",
   "private": false,
+  "license": "MIT",
+  "homepage": "https://github.com/agrc-widgets/kitchen-sink/tree/master/packages/helpers",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/agrc/kitchen-sink.git"
+  },
   "main": "./dist/index.js",
   "files": [
-    "/dist",
-    "/package.json"
+    "/dist"
   ],
   "peerDependencies": {
     "bootstrap": "^4.5.2",
