--- a/packages/sherlock/package.json
+++ b/packages/sherlock/package.json
@@ -2,10 +2,15 @@
   "name": "@agrc/sherlock",
   "version": "2.2.0",
   "private": false,
+  "license": "MIT",
+  "homepage": "https://github.com/agrc-widgets/kitchen-sink/tree/master/packages/helpers",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/agrc/kitchen-sink.git"
+  },
   "main": "./dist/Sherlock.js",
   "files": [
-    "/dist",
-    "/package.json"
+    "/dist"
   ],
   "peerDependencies": {
     "bootstrap": "^4.5.2",
