--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -2,10 +2,16 @@
   "name": "@agrc/layer-selector",
   "version": "4.0.0",
   "private": false,
+  "license": "MIT",
+  "homepage": "https://github.com/agrc-widgets/kitchen-sink/tree/master/packages/helpers",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/agrc/kitchen-sink.git"
+  },
   "main": "./dist/LayerSelector.js",
   "files": [
     "/dist",
-    "/package.json"
+    "layer-selector.gif"
   ],
   "peerDependencies": {
     "react": "^16.12.0",
