--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "devDependencies": {
     "@agrc/eslint-config": "^1.3.0",
     "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "@storybook/addon-essentials": "^6.0.27",
     "@storybook/addon-storyshots": "^6.0.22",
     "@storybook/addons": "^6.0.22",
@@ -26,15 +26,19 @@
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.3.0",
     "core-js": "^3.6.5",
+    "css-loader": "^5.0.0",
     "eslint": "^6.8.0",
     "esri-loader": "^2.15.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "lerna": "^3.22.1",
+    "node-sass": "^5.0.0",
     "react-test-renderer": "^16.13.1",
     "regenerator-runtime": "^0.13.7",
     "sass": "^1.26.11",
-    "sass-loader": "^10.0.2"
+    "sass-loader": "^10.0.5",
+    "svg-inline-loader": "^0.8.2",
+    "webpack-cli": "^4.1.0"
   },
   "peerDependencies": {
     "react": "^16.12.0"
@@ -58,12 +62,16 @@
     "prepare": "npm run build",
     "release": "lerna publish --conventional-commits",
     "pre-release": "lerna publish --conventional-commits --conventional-prerelease --canary",
-    "graduate": "lerna publish --conventional-commits --conventional-graduate"
+    "graduate": "lerna publish --conventional-commits --conventional-graduate",
+    "webpack": "lerna exec -- webpack --mode production --config ../../webpack.config.js"
   },
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "identity-obj-proxy"
     }
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1"
   }
 }
