--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -16,5 +16,8 @@
   "peerDependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6"
   }
 }
