chore: add keywords to packages

--- a/packages/dartboard/package.json
+++ b/packages/dartboard/package.json
@@ -19,5 +19,13 @@
   },
   "dependencies": {
     "reactstrap": "^8.6.0"
-  }
+  },
+  "keywords": [
+    "agrc",
+    "component",
+    "esri",
+    "react",
+    "geocoding",
+    "spatial"
+  ]
 }
