--- a/packages/dartboard/package.json
+++ b/packages/dartboard/package.json
@@ -18,7 +18,11 @@
     "react-dom": "^16.12.0"
   },
   "dependencies": {
+    "@agrc/helpers": "^1.2.2",
     "reactstrap": "^8.6.0"
+  },
+  "publishConfig": {
+    "directory": "dist"
   },
   "keywords": [
     "agrc",
