--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -22,5 +22,13 @@
     "esri",
     "coordinates",
     "projection"
-  ]
+  ],
+  "publishConfig": {
+    "directory": "dist"
+  },
+  "dependencies": {
+    "@agrc/helpers": "^1.2.2",
+    "@arcgis/core": "^4.18.0-next.20201110",
+    "lodash.throttle": "^4.1.1"
+  }
 }
