chore(lerna): add arcgis package

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-transform-rename-import": "^2.3.0",
     "chokidar-cli": "^2.1.0",
+    "copy-webpack-plugin": "^6.3.0",
     "copyfiles": "^2.3.0",
     "core-js": "^3.6.5",
     "eslint": "^6.8.0",
@@ -66,5 +67,8 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "identity-obj-proxy"
     }
+  },
+  "dependencies": {
+    "@arcgis/core": "^4.18.0-next.20201110"
   }
 }
