chore(lerna): update npm scripts for clarity

--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "build-storybook": "build-storybook",
     "build": "lerna exec 'babel src --out-dir dist --root-mode upward --delete-dir-on-start --source-maps --ignore \"**/*.stories.js\",\"**/*.test.js\" --env-name prod && copyfiles --up 1 src/*.svg dist && sass src:dist'",
     "test": "jest --watch",
-    "start": "chokidar \"packages/**/*.*\" \"!packages/**/dist/**/*.*\" -c \"npm run build\"",
-    "link": "lerna exec -- npm link",
-    "unlink": "lerna exec -- npm unlink",
+    "start": "npm run build && chokidar \"packages/**/*.*\" \"!packages/**/dist/**/*.*\" -c \"npm run build\"",
+    "link:external": "lerna exec -- npm link",
+    "link": "lerna link",
+    "unlink:external": "lerna exec -- npm unlink",
     "lint": "lerna exec -- eslint ./",
     "prepare": "npm run build",
     "release": "lerna publish --conventional-commits",
