chore(layer-selector): set publish config for lerna bootstrap

--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "classnames": "^2.2.6"
   },
+  "publishConfig": {
+    "directory": "dist"
+  },
   "keywords": [
     "agrc",
     "component",
