--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@agrc/mouse-trap",
   "version": "1.1.0",
+  "private": false,
   "description": "Widget to display cursor coordinates while hovering over a map",
   "license": "MIT",
   "homepage": "https://github.com/agrc-widgets/kitchen-sink/tree/master/packages/mouse-trap",
