--- a/package.json
+++ b/package.json
@@ -10,36 +10,36 @@
   "private": true,
   "devDependencies": {
     "@agrc/eslint-config": "^1.3.0",
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@storybook/addon-essentials": "^6.0.28",
-    "@storybook/addon-storyshots": "^6.0.28",
-    "@storybook/addons": "^6.0.28",
-    "@storybook/react": "^6.0.28",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-storyshots": "^6.1.14",
+    "@storybook/addons": "^6.1.14",
+    "@storybook/react": "^6.1.14",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-transform-rename-import": "^2.3.0",
     "chokidar-cli": "^2.1.0",
-    "copy-webpack-plugin": "^6.3.0",
-    "copyfiles": "^2.3.0",
-    "core-js": "^3.6.5",
-    "eslint": "^6.8.0",
-    "esri-loader": "^2.15.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "copyfiles": "^2.4.1",
+    "core-js": "^3.8.2",
+    "eslint": "^7.17.0",
+    "esri-loader": "^3.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
+    "jest": "^26.6.3",
     "lerna": "^3.22.1",
-    "react-test-renderer": "^16.13.1",
+    "react-test-renderer": "^17.0.1",
     "regenerator-runtime": "^0.13.7",
-    "sass": "^1.26.11",
-    "sass-loader": "^10.0.2"
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1"
   },
   "peerDependencies": {
-    "react": "^16.12.0"
+    "react": "^16.8.0 || ^17.0.0"
   },
   "eslintConfig": {
     "extends": "@agrc",
@@ -69,7 +69,5 @@
       "\\.(css|scss)$": "identity-obj-proxy"
     }
   },
-  "dependencies": {
-    "@arcgis/core": "^4.18.0-next.20201110"
-  }
+  "dependencies": {}
 }
