--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -14,11 +14,11 @@
     "layer-selector.gif"
   ],
   "peerDependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0"
   },
   "dependencies": {
-    "classnames": "^2.2.6"
+    "clsx": "^1.1.1"
   },
   "publishConfig": {
     "directory": "dist"
