--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -14,8 +14,8 @@
     "/dist"
   ],
   "peerDependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0"
   },
   "keywords": [
     "agrc",
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@agrc/helpers": "^1.3.0",
-    "@arcgis/core": "^4.18.0-next.20201110",
+    "@arcgis/core": "^4.18.1",
     "lodash.throttle": "^4.1.1"
   }
 }
