--- a/packages/sherlock/package.json
+++ b/packages/sherlock/package.json
@@ -13,20 +13,20 @@
     "/dist"
   ],
   "peerDependencies": {
-    "bootstrap": "^4.5.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "bootstrap": "^4.5.3",
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0"
   },
   "dependencies": {
     "@agrc/helpers": "^1.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "downshift": "^6.0.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "downshift": "^6.0.15",
     "lodash.debounce": "^4.0.8",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.uniqwith": "^4.5.0",
-    "reactstrap": "^8.6.0"
+    "reactstrap": "^8.8.1"
   },
   "publishConfig": {
     "directory": "dist"
