chore: update peerDependencies for react to be more flexible

--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -14,8 +14,8 @@
     "layer-selector.gif"
   ],
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0"
   },
   "dependencies": {
     "clsx": "^1.1.1"
