--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -14,8 +14,8 @@
     "/dist"
   ],
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0"
   },
   "keywords": [
     "agrc",
