--- a/packages/sherlock/package.json
+++ b/packages/sherlock/package.json
@@ -14,8 +14,8 @@
   ],
   "peerDependencies": {
     "bootstrap": "^4.5.3",
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0"
   },
   "dependencies": {
     "@agrc/helpers": "^1.3.1",
