--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
-    "@storybook/addon-essentials": "^6.1.14",
-    "@storybook/addon-storyshots": "^6.1.14",
-    "@storybook/addons": "^6.1.14",
-    "@storybook/react": "^6.1.14",
+    "@storybook/addon-essentials": "^6.2.0",
+    "@storybook/addon-storyshots": "^6.2.0",
+    "@storybook/addons": "^6.2.0",
+    "@storybook/react": "^6.2.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-require-context-hook": "^1.0.0",
@@ -33,6 +33,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
+    "react": "*",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.1",
     "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.4",
@@ -68,6 +70,5 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "identity-obj-proxy"
     }
-  },
-  "dependencies": {}
+  }
 }
