--- a/packages/sherlock/package.json
+++ b/packages/sherlock/package.json
@@ -26,6 +26,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.uniqwith": "^4.5.0",
+    "react-fast-compare": "^3.2.0",
     "reactstrap": "^8.8.1"
   },
   "publishConfig": {
