--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-transform-rename-import": "^2.3.0",
     "chokidar-cli": "^2.1.0",
-    "copy-webpack-plugin": "^7.0.0",
+    "copy-webpack-plugin": "^6.*",
     "copyfiles": "^2.4.1",
     "core-js": "^3.8.2",
     "eslint": "^7.17.0",
