--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "devDependencies": {
     "@agrc/eslint-config": "^1.3.0",
+    "@arcgis/core": "^4.18.1",
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
