--- a/packages/dart-board/package.json
+++ b/packages/dart-board/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@agrc/dart-board",
+  "name": "@ugrc/dart-board",
   "version": "3.3.1",
   "private": false,
   "license": "MIT",
   "homepage": "https://github.com/agrc/kitchen-sink/blob/main/packages/dartboard/READMD.md",
   "repository": {
     "type": "git",
-    "url": "https://github.com/agrc/kitchen-sink.git"
+    "url": "git+https://github.com/agrc/kitchen-sink.git"
   },
   "main": "./dist/index.js",
   "files": [
@@ -18,7 +18,7 @@
     "react-dom": "^16.8.0 || ^17.0.0"
   },
   "dependencies": {
-    "@agrc/helpers": "^1.3.1",
+    "@ugrc/helpers": "^1.3.1",
     "clsx": "^1.1.1",
     "reactstrap": "^8.8.1"
   },
@@ -26,11 +26,20 @@
     "directory": "dist"
   },
   "keywords": [
-    "agrc",
+    "ugrc",
     "component",
     "esri",
     "react",
     "geocoding",
     "spatial"
-  ]
+  ],
+  "description": "[![NPM version](https://badgen.net/npm/v/@ugrc/dart-board)](https://www.npmjs.com/package/@ugrc/dart-board)",
+  "bugs": {
+    "url": "https://github.com/agrc/kitchen-sink/issues"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "npm test"
+  },
+  "author": "ugrc developers"
 }
