--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agrc/mouse-trap",
+  "name": "@ugrc/mouse-trap",
   "version": "1.1.3",
   "private": false,
   "description": "Widget to display cursor coordinates while hovering over a map",
@@ -7,7 +7,7 @@
   "homepage": "https://github.com/agrc/kitchen-sink/tree/main/packages/mouse-trap",
   "repository": {
     "type": "git",
-    "url": "https://github.com/agrc/kitchen-sink.git"
+    "url": "git+https://github.com/agrc/kitchen-sink.git"
   },
   "main": "./dist/index.js",
   "files": [
@@ -31,5 +31,13 @@
     "@agrc/helpers": "^1.3.1",
     "@arcgis/core": "^4.18.1",
     "lodash.throttle": "^4.1.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/agrc/kitchen-sink/issues"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "npm test"
+  },
+  "author": "ugrc developers"
 }
