feat(monorepo): use npm workspaces

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,9 @@
 {
   "cSpell.words": [
-    "Centerlines",
-    "SGID",
-    "SRID",
-    "TSQL",
-    "Topo",
-    "agrc",
     "arcgis",
     "baselayer",
     "basemap",
+    "Centerlines",
     "clsx",
     "copyfiles",
     "escaperegexp",
@@ -19,8 +14,13 @@
     "haspopup",
     "lods",
     "maxresults",
+    "SGID",
+    "SRID",
     "storyshots",
     "toomany",
+    "Topo",
+    "TSQL",
+    "ugrc",
     "uniqwith",
     "webm",
     "webp",
