--- a/package.json
+++ b/package.json
@@ -66,5 +66,12 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "identity-obj-proxy"
     }
-  }
+  },
+  "workspaces": [
+    "packages/dart-board",
+    "packages/layer-selector",
+    "packages/mouse-trap",
+    "packages/sherlock",
+    "packages/utilities"
+  ]
 }
