--- a/packages/dart-board/package.json
+++ b/packages/dart-board/package.json
@@ -2,29 +2,7 @@
   "name": "@ugrc/dart-board",
   "version": "3.3.1",
   "private": false,
-  "license": "MIT",
-  "homepage": "https://github.com/agrc/kitchen-sink/blob/main/packages/dartboard/READMD.md",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/agrc/kitchen-sink.git"
-  },
-  "main": "./dist/index.js",
-  "files": [
-    "/dist"
-  ],
-  "peerDependencies": {
-    "bootstrap": "^4.5.3",
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
-  },
-  "dependencies": {
-    "@ugrc/helpers": "^1.3.1",
-    "clsx": "^1.1.1",
-    "reactstrap": "^8.8.1"
-  },
-  "publishConfig": {
-    "directory": "dist"
-  },
+  "description": "[![NPM version](https://badgen.net/npm/v/@ugrc/dart-board)](https://www.npmjs.com/package/@ugrc/dart-board)",
   "keywords": [
     "ugrc",
     "component",
@@ -33,13 +11,43 @@
     "geocoding",
     "spatial"
   ],
-  "description": "[![NPM version](https://badgen.net/npm/v/@ugrc/dart-board)](https://www.npmjs.com/package/@ugrc/dart-board)",
+  "homepage": "https://github.com/agrc/kitchen-sink/blob/main/packages/dartboard/READMD.md",
   "bugs": {
     "url": "https://github.com/agrc/kitchen-sink/issues"
   },
-  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agrc/kitchen-sink.git"
+  },
+  "license": "MIT",
+  "author": "ugrc developers",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/dart-board.es.js",
+      "require": "./dist/dart-board.umd.js"
+    }
+  },
+  "main": "./dist/dart-board.js",
+  "module": "./dist/dart-board.es.js",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
+    "build": "vite build --config ../../vite.config.js",
     "test": "npm test"
   },
-  "author": "ugrc developers"
+  "dependencies": {
+    "@ugrc/utilities": "^1.3.1",
+    "clsx": "^1.1.1",
+    "reactstrap": "^8.8.1"
+  },
+  "peerDependencies": {
+    "bootstrap": "^4.5.3",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
+  },
+  "publishConfig": {
+    "directory": "dist"
+  }
 }
