--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -3,41 +3,48 @@
   "version": "1.1.3",
   "private": false,
   "description": "Widget to display cursor coordinates while hovering over a map",
-  "license": "MIT",
-  "homepage": "https://github.com/agrc/kitchen-sink/tree/main/packages/mouse-trap",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/agrc/kitchen-sink.git"
-  },
-  "main": "./dist/index.js",
-  "files": [
-    "/dist"
-  ],
-  "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
-  },
   "keywords": [
-    "agrc",
+    "ugrc",
     "widgets",
     "esri",
     "coordinates",
     "projection"
   ],
-  "publishConfig": {
-    "directory": "dist"
-  },
-  "dependencies": {
-    "@agrc/helpers": "^1.3.1",
-    "@arcgis/core": "^4.18.1",
-    "lodash.throttle": "^4.1.1"
-  },
+  "homepage": "https://github.com/agrc/kitchen-sink/tree/main/packages/mouse-trap",
   "bugs": {
     "url": "https://github.com/agrc/kitchen-sink/issues"
   },
-  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agrc/kitchen-sink.git"
+  },
+  "license": "MIT",
+  "author": "ugrc developers",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/mouse-trap.es.js",
+      "require": "./dist/mouse-trap.umd.js"
+    }
+  },
+  "main": "./dist/mouse-trap.js",
+  "module": "./dist/mouse-trap.es.js",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "test": "npm test"
   },
-  "author": "ugrc developers"
+  "dependencies": {
+    "@arcgis/core": "^4.18.1",
+    "@ugrc/utilities": "^1.3.1",
+    "lodash.throttle": "^4.1.1"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
+  },
+  "publishConfig": {
+    "directory": "dist"
+  }
 }
