--- a/packages/sherlock/package.json
+++ b/packages/sherlock/package.json
@@ -2,38 +2,9 @@
   "name": "@ugrc/sherlock",
   "version": "2.3.0",
   "private": false,
-  "license": "MIT",
-  "homepage": "https://github.com/agrc/kitchen-sink/tree/main/packages/sherlock",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/agrc/kitchen-sink.git"
-  },
-  "main": "./dist/index.js",
-  "files": [
-    "/dist"
-  ],
-  "peerDependencies": {
-    "bootstrap": "^4.5.3",
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
-  },
-  "dependencies": {
-    "@agrc/helpers": "^1.3.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "downshift": "^6.0.15",
-    "lodash.debounce": "^4.0.8",
-    "lodash.escaperegexp": "^4.1.2",
-    "lodash.uniqwith": "^4.5.0",
-    "react-fast-compare": "^3.2.0",
-    "reactstrap": "^8.8.1"
-  },
-  "publishConfig": {
-    "directory": "dist"
-  },
+  "description": "A React component for searching for data and zooming to it on the map.",
   "keywords": [
-    "agrc",
+    "ugrc",
     "component",
     "esri",
     "react",
@@ -41,13 +12,41 @@
     "type-ahead",
     "spatial"
   ],
-  "description": "A React component for searching for data and zooming to it on the map.",
+  "homepage": "https://github.com/agrc/kitchen-sink/tree/main/packages/sherlock",
   "bugs": {
     "url": "https://github.com/agrc/kitchen-sink/issues"
   },
-  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agrc/kitchen-sink.git"
+  },
+  "license": "MIT",
+  "author": "ugrc developers",
+  "main": "./dist/index.js",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "test": "npm test"
   },
-  "author": "ugrc developers"
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@ugrc/utilities": "^1.3.1",
+    "downshift": "^6.0.15",
+    "lodash.debounce": "^4.0.8",
+    "lodash.escaperegexp": "^4.1.2",
+    "lodash.uniqwith": "^4.5.0",
+    "react-fast-compare": "^3.2.0",
+    "reactstrap": "^8.8.1"
+  },
+  "peerDependencies": {
+    "bootstrap": "^4.5.3",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
+  },
+  "publishConfig": {
+    "directory": "dist"
+  }
 }
