--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -23,24 +23,24 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/mouse-trap.es.js",
-      "require": "./dist/mouse-trap.umd.js"
+      "import": "./dist/mouse-trap.esm.js"
     }
   },
-  "main": "./dist/mouse-trap.js",
-  "module": "./dist/mouse-trap.es.js",
+  "main": "./dist/mouse-trap.esm.js",
+  "module": "./dist/mouse-trap.esm.js",
   "files": [
     "/dist"
   ],
   "scripts": {
+    "build": "vite build --config ../../vite.config.js",
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
-    "@arcgis/core": "^4.0.0",
     "@ugrc/utilities": "^1.3.1",
     "lodash.throttle": "^4.1.1"
   },
   "peerDependencies": {
+    "@arcgis/core": "^4.0.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
