ci(monorepo): add the build script for testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
       - name: 📥 Download dependencies
         run: npm ci
 
+      - name: 🏗 Run build script
+        run: npm run build
+
       - name: 🧪 Run tests
         run: npm test
 
